<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blink</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="driver_profile">Driver Profile</string>
    <string name="driver_name">Wael Nofal</string>
    <string name="driver_number">010012345678</string>
    <string name="title_activity_driver_profile">DriverProfile</string>
    <string name="driver_address">41Abd EL Moneam Hafez</string>
    <string name="view">View More</string>
    <string name="car_info">Car Info</string>
    <string name="title_activity_car_info">CarInfo</string>
   <string name="car_speed">141,356 Km</string>
    <string name="new_tire">New Tires</string>
    <string name="date_new_tire">Mar 20,2015</string>
    <string name="change_oil">Change Oil</string>
    <string name="birthday_date">20 May 1991</string>
    <string name="car_type">Kia,Rio 2001</string>
    <string name="kilo_value">47km/h (15,426 km)</string>
    <string name="user_name">Islam Mashaly</string>
    <string name="user_number">01007248408</string>
    <string name="battery">Battery</string>
    <string name="battery_date">Feb 5,2015</string>
    <string name="check_light">Check Lights</string>
</resources>
