<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blink.DriverProfile$PlaceholderFragment"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
<LinearLayout
android:orientation="vertical" android:layout_width="fill_parent"
android:layout_height="fill_parent"
   android:background="#FFFFFF">
<include layout="@layout/header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
      android:src="@drawable/driver"
        android:id="@+id/profileimg"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>

<TextView
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/driver_name"
    android:id="@+id/name"

    android:layout_gravity="center_horizontal" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/driver_number"
    android:id="@+id/number"
    android:layout_gravity="center_horizontal"

    android:textColor="#000000"
    android:textStyle="italic" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/driver_address"
        android:id="@+id/address"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp"
    android:layout_margin="20dp">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/birthday"
        android:id="@+id/birthday"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_number"
        android:id="@+id/birthdayday"
       android:layout_gravity="center"
        android:textColor="#000000"
        android:textStyle="italic" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_margin="20dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/birthday"
            android:id="@+id/car"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_number"
            android:id="@+id/carnumber"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textStyle="italic" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_margin="20dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/birthday"
            android:id="@+id/kilo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_number"
            android:id="@+id/kilonumber"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/textView"
        android:layout_gravity="right"
       android:textColor="#000000"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:text="Create new Account"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"
        android:textColor="#FFFFFF"
        android:background="#87F717"
        android:layout_margin="10dp"
        />

</LinearLayout>
    </ScrollView>